--- a/Creditworthiness_Model.ipynb
+++ b/Creditworthiness_Model.ipynb
@@ -87,7 +87,7 @@
       "source": [
         "# Predicting creditworthiness \n",
         "\n",
-        "The following dataset (https://www.kaggle.com/code/ppb00x/credit-risk-classification) will be used in machine learning to predict creditworthiness of customers."
+        "The following dataset (https://www.kaggle.com/code/ppb00x/credit-risk-classification) will be used in multiple linear regression to predict creditworthiness of customers."
       ],
       "metadata": {
         "id": "K9ixRhe2Lx3D"
